<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/edit_profile_fragment"
    tools:context=".profile.ProfileEditFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title_edit_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit Profile"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="@android:color/transparent"
                android:text="Back"
                android:textColor="@color/primary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/small_save_button"
                android:layout_width="82dp"
                android:layout_height="44dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/primary"
                android:text="Save"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/insideConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="175dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/name_editText"
                android:layout_width="297dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_white_rounded"
                android:backgroundTint="?attr/colorContainer"
                android:ems="10"
                android:hint="Name"
                android:maxLength="21"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_pic_edit" />

            <TextView
                android:id="@+id/enter_name_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="Name"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/name_editText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.108"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/bio_prompt"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:layout_marginBottom="4dp"
                android:text="Bio"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/bio_editText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.104"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/bio_editText"
                android:layout_width="298dp"
                android:layout_height="157dp"
                android:layout_gravity="top"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_white_rounded"
                android:backgroundTint="?attr/colorContainer"
                android:gravity="top|start"
                android:hint="Bio"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:minLines="6"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.415"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_editText" />

            <ImageButton
                android:id="@+id/profile_pic_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="display picture"
                android:background="@drawable/round_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.207"
                android:src="@drawable/google_logo"
                tools:srcCompat="@tools:sample/avatars" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>