<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile_fragment"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="729dp">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:backgroundTint="?attr/colorPrimary"
                    android:background="@drawable/top_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/top_background" />

                <TextView
                    android:id="@+id/name_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Andy Tran"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_pic" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="aqtran.username"
                    android:textColor="@color/gray04"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/name_profile"
                    app:layout_constraintStart_toStartOf="@+id/name_profile"
                    app:layout_constraintTop_toBottomOf="@+id/name_profile" />

                <TextView
                    android:id="@+id/description_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="Biography"
                    android:autoSizeTextType="uniform"
                    android:maxWidth="600px"
                    android:gravity="center|center_vertical"
                    app:layout_constraintEnd_toEndOf="@+id/username"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="@+id/username"
                    app:layout_constraintTop_toBottomOf="@+id/username" />

                <TextView
                    android:id="@+id/profile_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:text="Profile"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:background="@android:color/transparent"
                    android:text="Edit"
                    app:layout_constraintEnd_toStartOf="@+id/profile_header"
                    app:layout_constraintHorizontal_bias="0.25"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/logout_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:background="@android:color/transparent"
                    android:text="Logout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/profile_header"
                    app:layout_constraintTop_toTopOf="parent" />

<!--                <ImageView-->
<!--                    android:id="@+id/imageView2"-->
<!--                    android:layout_width="90dp"-->
<!--                    android:layout_height="90dp"-->
<!--                    android:layout_marginStart="70dp"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/description_profile"-->
<!--                    app:layout_constraintVertical_bias="0.100000024"-->
<!--                    app:srcCompat="?attr/popupMenuBackground" />-->

<!--                <ImageView-->
<!--                    android:id="@+id/imageView3"-->
<!--                    android:layout_width="90dp"-->
<!--                    android:layout_height="90dp"-->
<!--                    android:layout_marginEnd="70dp"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/description_profile"-->
<!--                    app:layout_constraintVertical_bias="0.100000024"-->
<!--                    app:srcCompat="?attr/popupMenuBackground" />-->

<!--                <TextView-->
<!--                    android:id="@+id/total_value"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="$ 1000"-->
<!--                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"-->
<!--                    app:layout_constraintEnd_toEndOf="@+id/imageView2"-->
<!--                    app:layout_constraintStart_toStartOf="@+id/imageView2"-->
<!--                    app:layout_constraintTop_toTopOf="@+id/imageView2" />-->

<!--                <TextView-->
<!--                    android:id="@+id/total_value_profile"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="Total Value"-->
<!--                    android:textStyle="bold"-->
<!--                    app:layout_constraintBottom_toTopOf="@+id/total_value"-->
<!--                    app:layout_constraintEnd_toEndOf="@+id/imageView2"-->
<!--                    app:layout_constraintStart_toStartOf="@+id/imageView2"-->
<!--                    app:layout_constraintTop_toTopOf="@+id/imageView2" />-->

                <ImageButton
                    android:id="@+id/profile_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="display picture"
                    android:background="@drawable/round_btn"
                    android:src="@drawable/profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView5"
                    app:layout_constraintVertical_bias="0.288"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>